examples/failing/UIntNegative.purs
-- @shouldFailWith NegativeUInt

module Main where

n :: UInt
n =  -1234u
